--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/Yasmur/React.git",
+  "homepage": "https://Yasmur.github.io/App.git",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
